--- a/src/client/scss/components/preview.scss
+++ b/src/client/scss/components/preview.scss
@@ -14,7 +14,7 @@
   .status {
     width: 25%;
   }
-  .main {
+  .preview-form {
     flex-grow: 1;
     overflow: hidden;
   }
