--- a/src/client/scss/globals/forms.scss
+++ b/src/client/scss/globals/forms.scss
@@ -1,12 +1,10 @@
 input.underline {
   color: $text-color;
-  font-size: 18px;
-  font-weight: 500;
   background-color: transparent;
   box-shadow: none;
   border: none;
   border-radius: 0;
   border-bottom: 2px solid $text-color;
-  padding: 6px 12px 0px 0;
+  padding: 0;
   width: 100%;
 }
